# magni_robot

./: README.md  magni.rosinstall  robot.yaml
magni_bringup/: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
magni_bringup/config/: default_robot.yaml
magni_bringup/debian/: magni-base.service  magni-base.service.in  magni-base.timer  postinst
magni_bringup/launch/: base.launch  base.launch.py  core.launch  core_launch.em  lidar.launch  start.launch.py
magni_bringup/param/: base.yaml  diagnostics_agg.yaml  robot.yaml
magni_bringup/scripts/: create_launch_core.py  launch_core.py  magni_info.py  pckg_version.py  pkg_version.py  ros_log_clean.bash
magni_demos/: CHANGELOG.rst  CMakeLists.txt  package.xml
magni_demos/launch/: dnn_rotate.launch  dnn_rotate.launch.py  fiducial_floor_follow.launch  fiducial_follow.launch  fiducial_follow.launch.py  joystick.launch  joystick.launch.py  roshub.launch  roshub.launch.py  simple_nav_map_flat.launch  simple_navigation.launch  simple_navigation.launch.py  simple_navigation_flat.launch  speech_control.launch  teleop.launch  teleop.launch.py
magni_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
magni_description/config/: laser_filter_chain.yaml
magni_description/extrinsics/: camera_extrinsics_ahead.yaml  camera_extrinsics_forward.yaml  camera_extrinsics_forward_b.yaml  camera_extrinsics_tower.yaml  camera_extrinsics_upward.yaml  gps_extrinsics_top_plate.yaml  lidar_extrinsics_front.yaml  lidar_extrinsics_front_ur12.yaml  lidar_extrinsics_front_ur50.yaml  lidar_extrinsics_shell_front.yaml  lidar_extrinsics_shell_left.yaml  lidar_extrinsics_shell_right copy.yaml  lidar_extrinsics_top_plate.yaml  lidar_extrinsics_top_plate_back.yaml  lidar_extrinsics_top_plate_center.yaml  lidar_extrinsics_tower_forward.yaml
magni_description/launch/: description.launch  description.launch.py
magni_description/meshes/: caster_wheel.dae  front_wheel.dae  magni_body.dae
magni_description/meshes/sensors/: ur50_lidar.dae
magni_description/param/: camera_extrinsics_ahead.yaml  camera_extrinsics_forward.yaml  camera_extrinsics_upward.yaml  lidar_extrinsics_top_plate.yaml  robot.yaml
magni_description/urdf/: basic_magni.urdf  inertial.xacro  magni.gazebo.xacro  magni.transmission.xacro  magni.urdf copy.xacro  magni.urdf.xacro  out.urdf
magni_description/urdf/sensors/: hokuyo_lidar.xacro  raspi_camera.xacro  sonar_hc-sr04.xacro  ur50_lidar.xacro
magni_desktop/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
magni_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
magni_gazebo/config/: magni_controllers.yaml
magni_gazebo/launch/: empty_world.launch  empty_world.launch.py  empty_world_tower.launch  empty_world_tower.launch.py  fiducial_world_stag.world  magni.launch  magni.launch.py  motion_vectors.launch  rviz_config.rviz  stag_world.launch  willowgarage.world  willowgarage_world.launch  workshop.launch
magni_gazebo/launch/fiducials/: fiducial_grid_spawn.launch  fiducial_ground.launch  fiducial_ground_spawn.launch  fiducial_slam_gazebo.launch  fiducial_world.launch
magni_gazebo/models/BIDIR-stag-7000/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7001/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7002/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7003/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7004/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7005/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7006/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7007/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7008/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7009/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7010/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7011/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7012/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7013/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7014/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7015/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7016/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7017/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7018/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7019/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7020/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7021/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7022/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7023/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7024/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7025/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7026/: model.config  model.sdf
magni_gazebo/models/BIDIR-stag-7027/: model.config  model.sdf
magni_gazebo/scripts/: motion_vectors.py  visual_vector_listener.py
magni_nav/: CHANGELOG.rst  CMakeLists.txt  Makefile  README.txt  package.xml
magni_nav/launch/: aruco.launch  aruco.launch.py  aruco_nav_map_flat.launch  aruco_navigation_flat.launch  bag.launch  ekf.launch  fiducials.launch  move_base.launch  move_base.launch.py  move_basic.launch  move_basic.launch.py
magni_nav/maps/: blank_map.yaml
magni_nav/param/: bag.rviz  base_local_planner_param.yaml  costmap_common_param.yaml  ekf.yaml  global_costmap_param.yaml  local_costmap_param.yaml
magni_nav/scripts/: initialize_kalman_filter.py
magni_nav/src/: compute_std_dev.py  nullify_covariance.py
magni_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
magni_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml
magni_teleop/launch/: logitech.launch  logitech.launch.py  rosbridge.launch  rosbridge.launch.py
magni_teleop/param/: logitech.yaml
magni_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
magni_viz/launch/: magni_nav.launch  magni_robot.launch  view_nav.launch  view_nav.launch.py  view_robot.launch  view_robot.launch.py
magni_viz/rviz/: magni_nav.rviz  magni_robot.rviz  view_nav.rviz  view_robot.rviz
(+1187 files in other folders)
