<?xml version="1.0"?>
<package format="2">
  <name>magni_bringup</name>
  <version>0.2.1</version>
  <description>The magni_bringup package</description>

  <maintainer email="rohan@aleopile.com">Rohan Agrawal</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>magni_description</depend>
  <depend>ubiquity_motor</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>diff_drive_controller</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
