<?xml version="1.0"?>
<package format="2">
  <name>magni_demos</name>
  <version>0.2.0</version>
  <description>The magni_demos package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>magni_bringup</depend>
  <depend>magni_nav</depend>
  <depend>magni_teleop</depend>
  <depend>rosbridge_server</depend>
  <depend>tf2_web_republisher</depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
