<?xml version="1.0"?>
<package format="2">
  <name>magni_demos</name>
  <version>0.4.3</version>
  <description>The magni_demos package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>magni_bringup</exec_depend>
  <exec_depend>magni_nav</exec_depend>
  <exec_depend>magni_teleop</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>dnn_detect</exec_depend>
  <exec_depend>tf2_web_republisher</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
