<?xml version="1.0"?>
<package format="2">
  <name>magni_description</name>
  <version>0.6.1</version>
  <description>The magni_description package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <depend>laser_filters</depend>


  <export></export>
</package>
