<?xml version="1.0"?>
<package format="3">
  <name>magni_description</name>
  <version>0.6.1</version>
  <description>The ros2  magni_description package</description>

  <maintainer email="alan.federman@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

<buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
