<?xml version="1.0"?>
<package format="2">
  <name>magni_desktop</name>
  <version>0.4.3</version>
  <description>Meta package for all the desktop side utilities for magni</description>
  
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>magni_description</exec_depend>
  <exec_depend>magni_teleop</exec_depend>
  <exec_depend>magni_gazebo</exec_depend>
  <exec_depend>magni_viz</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage />
  </export>
</package>
