<?xml version="1.0"?>
<package format="2">
  <name>magni_nav</name>
  <version>0.2.2</version>
  <description>The magni_nav package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>fiducial_slam</depend>
  <depend>fiducial_detect</depend>
  <depend>aruco_detect</depend>
  <depend>move_basic</depend>
  <depend>move_base</depend>

  <!-- We implicitly depend on raspicam_node too -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
