<?xml version="1.0"?>
<package format="3">
  <name>magni_nav</name>
  <version>0.6.1</version>
  <description>The magni_nav package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>fiducial_slam</exec_depend>
  <exec_depend>aruco_detect</exec_depend>
  <exec_depend>move_basic</exec_depend>
  <exec_depend>move_base</exec_depend>

  <!-- We implicitly depend on raspicam_node too -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
