<?xml version="1.0"?>
<package format="2">
  <name>magni_robot</name>
  <version>0.1.0</version>
  <description>The magni_robot package</description>
  
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage />
  </export>
</package>
