<?xml version="1.0"?>
<package format="3">
  <name>magni_robot</name>
  <version>0.6.1</version>
  <description>The magni_robot package</description>
  
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>magni_bringup</exec_depend>
  <exec_depend>magni_demos</exec_depend>
  <exec_depend>magni_description</exec_depend>
  <exec_depend>magni_nav</exec_depend>
  <exec_depend>magni_teleop</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- <build_type>ament_cmake</build_type> -->
    <metapackage />
  </export>
</package>
