<?xml version="1.0"?>
<package format="2">
  <name>magni_teleop</name>
  <version>0.2.1</version>
  <description>The magni_teleop package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
</package>
