<?xml version="1.0"?>
<package format="3">
  <name>magni_teleop</name>
  <version>0.6.1</version>
  <description>The ros2 magni_teleop package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
