<?xml version="1.0"?>
<package format="2">
  <name>magni_viz</name>
  <version>0.4.3</version>
  <description>The magni_viz package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rviz</exec_depend>
  <export>
  </export>
</package>
