<?xml version="1.0"?>
<package format="3">
  <name>magni_viz</name>
  <version>0.6.1</version>
  <description>The magni_viz package</description>

  <maintainer email="send2arohan@gmail.com">Rohan Agrawal</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rviz</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
